Added empty for {{ else }} to ensure config.fish is created

--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -4,4 +4,6 @@ if status is-interactive
     set SSH_AUTH_SOCK (gpgconf --list-dirs agent-ssh-socket)
     # Commands to run in interactive sessions can go here
 end
+{{ else }}
+#empty
 {{ end }}
