Check for exisiting fish shell

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,6 +1,7 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
 {{ if eq .chezmoi.osRelease.id "debian" -}}
+if ! command -v fish &>/dev/null; then
 {{ if eq .chezmoi.osRelease.versionID "10" -}}
 #Fish Repo setup & Install
 echo 'deb http://download.opensuse.org/repositories/shells:/fish:/release:/3/Debian_10/ /' | sudo tee /etc/apt/sources.list.d/shells:fish:release:3.list
@@ -9,10 +10,11 @@ curl -fsSL https://download.opensuse.org/repositories/shells:fish:release:3/Debi
 #Fish Repo setup & Install
 echo 'deb http://download.opensuse.org/repositories/shells:/fish:/release:/3/Debian_11/ /' | sudo tee /etc/apt/sources.list.d/shells:fish:release:3.list
 curl -fsSL https://download.opensuse.org/repositories/shells:fish:release:3/Debian_11/Release.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/shells_fish_release_3.gpg > /dev/null
+fi
 {{ end }}
 echo "Debian Found"
 sudo apt update
-sudo apt install <<EOF 
+sudo apt install <<"EOF" 
 fish  
 bat 
 fd-find 
