Working package install script for Debain

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -6,6 +6,7 @@ if ! command -v fish &>/dev/null; then
 #Fish Repo setup & Install
 echo 'deb http://download.opensuse.org/repositories/shells:/fish:/release:/3/Debian_10/ /' | sudo tee /etc/apt/sources.list.d/shells:fish:release:3.list
 curl -fsSL https://download.opensuse.org/repositories/shells:fish:release:3/Debian_10/Release.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/shells_fish_release_3.gpg > /dev/null
+fi
 {{ else if eq .chezmoi.osRelease.versionID "11" -}}
 #Fish Repo setup & Install
 echo 'deb http://download.opensuse.org/repositories/shells:/fish:/release:/3/Debian_11/ /' | sudo tee /etc/apt/sources.list.d/shells:fish:release:3.list
@@ -14,17 +15,18 @@ fi
 {{ else }}
 fi
 {{ end }}
-echo "Debian Found"
-sudo apt update
-sudo apt install <<"EOF" 
-fish  
-bat 
-fd-find 
-jq 
-pwgen 
-net-tools 
-direnv
-EOF
+echo "Debian Found "
+#sudo apt update;
+#echo "got to after update";
+sudo apt install \
+fish \
+bat \
+fd-find \
+htop \
+jq \
+pwgen \
+net-tools \
+direnv \
 {{ else if eq .chezmoi.osRelease.id "fedora" -}}
 sudo dnf install \
 fish \
