--- a/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
@@ -2,6 +2,8 @@
 
 #!/bin/sh
 
+if ! command -v docker &>/dev/null; then
+
 # https://docs.docker.com/engine/install/ubuntu/
 {{ if eq .chezmoi.osRelease.id "debian" -}}
 
@@ -23,10 +25,14 @@ sudo apt-get install -y \
     containerd.io \
     docker-ce \
     docker-ce-cli
-
+fi
 {{ else if eq .chezmoi.osRelease.id "fedora" -}}
 
 sudo dnf -y install dnf-plugins-core
+
+if command -v podman &>/dev/null; then
+sudo dnf remove podman
+fi
 
 sudo dnf config-manager \
     --add-repo \
@@ -35,6 +41,9 @@ sudo dnf config-manager \
 sudo dnf install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
 sudo systemctl start docker
+fi
+{{ else }}
+fi
 {{ end }}
 
 sudo usermod $USER --append --group docker
