--- a/.chezmoiscripts/run_onchange_before_install-nvim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-nvim.sh.tmpl
@@ -19,4 +19,13 @@ ln -s $PWD/nvim.appimage $HOME/.local/bin/nvim
 
 sudo dnf install nvim
 {{ end }}
+
+
+### Install Vim Plug
+#
+#if [ ! -e $HOME/.local/share/nvim/site/autoload/plug.vim ]; then
+#sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+#       https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+#fi
+
 {{ end }}
