Removed fzf fish plugin

--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -4,6 +4,8 @@ if status is-interactive
     set SSH_AUTH_SOCK (gpgconf --list-dirs agent-ssh-socket)
     # Commands to run in interactive sessions can go here
 end
+
+pyenv init - | source
 {{ else }}
 #empty
 {{ end }}
