--- a/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
@@ -1,11 +1,15 @@
 {{ if eq .chezmoi.os "linux" -}}
-
 #!/bin/sh
+echo "Checking if Docker is installed..."
 
 if ! command -v docker &>/dev/null; then
 
+echo "Docker is not installed.. installing"
+
 # https://docs.docker.com/engine/install/ubuntu/
 {{ if eq .chezmoi.osRelease.id "debian" -}}
+
+echo "Found Debian"
 
 sudo apt-get install \
     ca-certificates \
@@ -28,6 +32,8 @@ sudo apt-get install -y \
 fi
 {{ else if eq .chezmoi.osRelease.id "fedora" -}}
 
+echo "Found Fedora..."
+
 sudo dnf -y install dnf-plugins-core
 
 if command -v podman &>/dev/null; then
@@ -45,6 +51,8 @@ fi
 {{ else }}
 fi
 {{ end }}
+
+echo "adding $USER to docker group"
 
 sudo usermod $USER --append --group docker
 
