--- a/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
@@ -4,56 +4,64 @@ echo "Checking if Docker is installed..."
 
 if ! command -v docker &>/dev/null; then
 
-echo "Docker is not installed.. installing"
-
-# https://docs.docker.com/engine/install/ubuntu/
+    echo "Docker is not installed.. installing"
+    
+    # https://docs.docker.com/engine/install/ubuntu/
 {{ if eq .chezmoi.osRelease.id "debian" -}}
 
-echo "Found Debian"
-
-sudo apt-get install \
-    ca-certificates \
-    curl \
-    gnupg \
-    lsb-release
-
-curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --batch --dearmor --yes -o /usr/share/keyrings/docker-archive-keyring.gpg
-
-echo \
-    "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-    $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-
-sudo apt-get update
-
-sudo apt-get install -y \
-    containerd.io \
-    docker-ce \
-    docker-ce-cli
+    echo "Found Debian"
+    
+    sudo apt-get install \
+        ca-certificates \
+        curl \
+        gnupg \
+        lsb-release
+    
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --batch --dearmor --yes -o /usr/share/keyrings/docker-archive-keyring.gpg
+    
+    echo \
+        "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+        $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+    
+    sudo apt-get update
+    
+    sudo apt-get install -y \
+        containerd.io \
+        docker-ce \
+        docker-ce-cli
+else
+    echo "Docker is Installed"
 fi
 {{ else if eq .chezmoi.osRelease.id "fedora" -}}
 
-echo "Found Fedora..."
-
-sudo dnf -y install dnf-plugins-core
-
-if command -v podman &>/dev/null; then
-sudo dnf remove podman
-fi
-
-sudo dnf config-manager \
-    --add-repo \
-    https://download.docker.com/linux/fedora/docker-ce.repo
-
-sudo dnf install docker-ce docker-ce-cli containerd.io docker-compose-plugin
-
-sudo systemctl start docker
+    echo "Found Fedora..."
+    
+    sudo dnf -y install dnf-plugins-core
+    
+    if command -v podman &>/dev/null; then
+        sudo dnf remove podman
+    fi
+    
+    sudo dnf config-manager \
+        --add-repo \
+        https://download.docker.com/linux/fedora/docker-ce.repo
+    
+    sudo dnf install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+    
+    sudo systemctl start docker
+else
+    echo "Docker is Installed"
 fi
 {{ else }}
 fi
 {{ end }}
 
-echo "adding $USER to docker group"
-
-sudo usermod $USER --append --group docker
+echo "Checking for Docker non-root user.."
+if ! groups $USER | grep -qo docker; then 
+    echo "adding $USER to docker group"
+    sudo usermod $USER --append --group docker
+else
+    echo "Docker non-root user is already setup"
+fi
 
 {{ end -}}
