Added script to change shell to fish

--- a/.chezmoiscripts/run_onchange_before_setup-shell.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_setup-shell.sh.tmpl
@@ -1,8 +1,13 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
 
-[[ "$SHELL" == "/usr/bin/fish" ]] && echo "Fish is installed" || echo "Changing shell to fish.." && chsh -s /usr/bin/fish 
-
+if ! command -a chsh &>/dev/null; then
+    {{ if eq .chezmoi.osRelease.id "fedora" -}}
+    sudo dnf install util-linux-user
+fi
+{{ else }}
+    echo "not sure why you don't have chsh...'"
+fi
 {{ end }}
-
-
+[[ "$SHELL" == "/usr/bin/fish" ]] && echo "Fish is installed" || echo "Changing shell to fish.." && chsh -s /usr/bin/fish 
+{{ end }}
