--- a/.chezmoiscripts/run_onchange_after_setup-shell.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_setup-shell.sh.tmpl
@@ -1,5 +1,5 @@
 {{ if eq .chezmoi.os "linux" -}}
-#!/bin/sh
+#!/bin/bash
 
 if ! command -a chsh &>/dev/null; then
     {{ if eq .chezmoi.osRelease.id "fedora" -}}
