--- a/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
@@ -1,5 +1,5 @@
 {{ if eq .chezmoi.os "linux" -}}
-#!/bin/sh
+#!/bin/bash
 echo "Checking if Docker is installed..."
 
 if ! command -v docker &>/dev/null; then
