--- a/.chezmoiscripts/run_onchange_after_setup-shell.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_setup-shell.sh.tmpl
@@ -9,6 +9,6 @@ fi
     echo "not sure why you don't have chsh...'"
 fi
 {{ end }}
-[[ "$SHELL" == "/usr/bin/fish" ]] && echo "Fish is installed" || echo "Changing shell to fish.." && chsh -s /usr/bin/fish 
+[[ "$SHELL" == "/usr/bin/fish" ]] && echo "Fish is installed" || echo "Changing shell to fish.."; chsh -s /usr/bin/fish 
 [[ "$nvm_default_version" == "v14.19.2" ]] && echo "NVM default version is set" || echo "Setting defulat nvm version..." && fish -c "set --universal nvm_default_version v14.19.2"
 {{ end }}
