--- a/.chezmoiscripts/run_onchange_after_setup-nvm.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_setup-nvm.sh.tmpl
@@ -2,12 +2,19 @@
 
 #!/usr/bin/fish
 
+set chosen_version v14.19.2
+
 # NVM Default Version Env Variable Check
 
-if test "$nvm_default_version" = "v14.19.2"
+if test "$nvm_default_version" = "$chosen_version"
     echo "NVM default version is set" 
 else
     echo "Setting default nvm version..." 
-    set --universal nvm_default_version v14.19.2
+    set --universal nvm_default_version $chosen_version
 end
+
+if test (node --version) != "$chosen_version"
+    nvm install $chosen_version
+end
+
 {{ end }}
