--- a/.chezmoiscripts/run_onchange_before_install-nvim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-nvim.sh.tmpl
@@ -29,7 +29,7 @@ fi
 {{ else if eq .chezmoi.osRelease.id "fedora" -}}
 
     echo "Found Fedora.. Installing with DNF"
-    sudo dnf install neovim
+    sudo dnf install -y neovim
 fi
 
 {{ else }}
