--- a/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-docker.sh.tmpl
@@ -11,7 +11,7 @@ if ! command -v docker &>/dev/null; then
 
     echo "Found Debian"
     
-    sudo apt-get install \
+    sudo apt-get install -y \
         ca-certificates \
         curl \
         gnupg \
