--- a/.chezmoiscripts/run_onchange_after_install-fisher.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_install-fisher.sh.tmpl
@@ -3,7 +3,7 @@
 #!/usr/bin/fish
 
 
-if ! type -q fisher; then
+if ! type -q fisher
     echo "Fisher not found.."
     echo "Installing Fisher.."
     curl -sL https://raw.githubusercontent.com/jorgebucaran/fisher/main/functions/fisher.fish | source && fisher install jorgebucaran/fisher
