--- a/.chezmoiscripts/run_onchange_after_greeting_setup.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_greeting_setup.sh.tmpl
@@ -8,6 +8,8 @@ fi
 
 [[ ! -f ~/.prompt/get_weather.sh ]] && echo "weather script does not exist" && exit
 
+crontab -l > crontab.bak
+
 (crontab -l 2>/dev/null; echo "0,15,30,45 * * * * ~/.prompt/get_weather.sh")| crontab -
 
 {{ end }}
