Update nvim and general package install scripts

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -3,7 +3,13 @@
 
 if ! command -v fish &>/dev/null; then
 echo "Fish shell not installed.. will install"
-
+    
+{{ if eq .chezmoi.osRelease.id "ubuntu" -}}
+    sudo apt-add-repository ppa:fish-shell/release-3
+    sudo apt update
+else 
+  echo -e "Already installed \n Skipping..."
+fi
 {{ if eq .chezmoi.osRelease.id "debian" -}}
 
 echo "Found Debian.. checking release version"
@@ -14,7 +20,10 @@ echo "Found Debian 10.. adding Third party fish repo"
 
 echo 'deb http://download.opensuse.org/repositories/shells:/fish:/release:/3/Debian_10/ /' | sudo tee /etc/apt/sources.list.d/shells:fish:release:3.list
 curl -fsSL https://download.opensuse.org/repositories/shells:fish:release:3/Debian_10/Release.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/shells_fish_release_3.gpg > /dev/null
+sudo apt update
 
+else 
+  echo -e "Already installed \n Skipping..."
 fi
 
 {{ else if eq .chezmoi.osRelease.versionID "11" -}}
@@ -24,11 +33,16 @@ echo "Found Debian 11... adding Third party fish repo"
 #Fish Repo setup & Install
 echo 'deb http://download.opensuse.org/repositories/shells:/fish:/release:/3/Debian_11/ /' | sudo tee /etc/apt/sources.list.d/shells:fish:release:3.list
 curl -fsSL https://download.opensuse.org/repositories/shells:fish:release:3/Debian_11/Release.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/shells_fish_release_3.gpg > /dev/null
+sudo apt update
 
+else 
+  echo -e "already installed \n skipping..."
 fi
 
 {{ else }}
-
+  echo -e "Not installed but I don't know this OS \n Skipping..."
+else 
+  echo -e "already installed \n skipping..."
 fi
 
 {{ end }}
@@ -45,29 +59,30 @@ pwgen \
 net-tools \
 direnv \
 
+{{ end }}
+
 {{ else if eq .chezmoi.osRelease.id "fedora" -}}
 
 echo "Found Fedora.. installing Fish and General Packages with DNF..."
 
+sudo dnf update
 sudo dnf install -y \
-fish \
-neovim \
+fish 
+else
+  echo -e "Fish already installed.."
+fi
+
+sudo dnf install -y \
 python3-neovim \
-task \
-fira-code-fonts \
 htop \
 gopass \
 ansible \
 openssl \
 bat \
-gnome-shell-extension-pop-shell \
 fd-find \
 fzf \
 neofetch \
 sshfs \
 rofi \
-
-fi
 {{ end }}
-fi
 {{ end }}
