Fix sway config template

--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -1,7 +1,7 @@
 {{- if eq .chezmoi.hostname "lenovoewan" }}
 include ~/.config/sway/config.lenovoewan
 {{ end }}
-{{- if eq .chezmoi.hostname "xps" }}
+{{- if eq .chezmoi.hostname "xpsewan" }}
 include ~/.config/sway/config.xpsewan
 {{ end }}
 
